--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,15 +28,26 @@
     margin-top: 5px;
   }
    */
-   div{
-    height: 100vh;
+   .container{
+  
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
+}
+.calendar-container{
+  position: relative;
+}
+.calendar{
+  position: absolute;
+  top: 39px;
+}
+caret-color{
+  color: #d9d9d9;
+
 }
 .calendar-input{
     display: flex;
-    border: 0.5px solid;
+    border: 0.5px solid #d9d9d9;
     padding: 5px;
     border-radius: 10px;
 }
@@ -46,13 +57,13 @@
     background: transparent;
     border: none !important;
     outline: none !important;
-    box-shadow: none; /* Removes any shadow that might be added on focus */
-    padding: 0; /* Adjust padding if necessary */
-    margin: 0; /* Adjust margin if necessary */
+    box-shadow: none;
+    padding: 0; 
+    margin: 0; 
 }
 
 .calendar-icon{
-    color: #5554548a;
+    color: #d9d9d9;
     align-self: center;
     display: flex;
 }
